change list to collectors